--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost/MinProgQue
+sqlalchemy.url = postgresql+asyncpg://%(USER)s:%(PASSWORD)s@%(HOST)s:%(PORT)s/%(DBNAME)s?async_fallback=True
 
 
 [post_write_hooks]
